[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/Made with insMind-jackpaint.png" type="Texture" id=1]
[ext_resource path="res://images/continuarsinfondo2.png" type="Texture" id=2]
[ext_resource path="res://images/tiendasinfondofinal.png" type="Texture" id=3]
[ext_resource path="res://images/nuevapartidasinfondo2.png" type="Texture" id=4]
[ext_resource path="res://images/pixil-frame-04.png" type="Texture" id=5]
[ext_resource path="res://scenes/Main menu.gd" type="Script" id=6]
[ext_resource path="res://images/nuevapartidasinfondo2presed.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -4.0
margin_right = 718.0
margin_bottom = 1275.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 57.0
margin_top = 963.0
margin_right = 757.0
margin_bottom = 1663.0
texture = ExtResource( 5 )

[node name="nuevapartida" type="TextureButton" parent="."]
margin_left = 190.0
margin_top = 334.0
margin_right = 593.0
margin_bottom = 509.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )

[node name="contitinuar" type="TextureButton" parent="."]
margin_left = 190.0
margin_top = 682.0
margin_right = 593.0
margin_bottom = 866.0
texture_normal = ExtResource( 2 )

[node name="Tienda" type="TextureButton" parent="."]
margin_left = 496.0
margin_top = 873.0
margin_right = 740.0
margin_bottom = 1041.0
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="nuevapartida" to="." method="_on_nuevapartida_pressed"]
[connection signal="pressed" from="contitinuar" to="." method="_on_contitinuar_pressed"]
[connection signal="pressed" from="Tienda" to="." method="_on_Tienda_pressed"]
